# Fiji

./: Cargo.toml  README.md  TODOS.md  readme.md  todos.md
examples/: 2d_example.rs  3d_example.rs  block_example.rs  circle_test_example.rs  default_example.rs  general_example.rs  image_example.rs  ui_example.rs
fiji/: Cargo.toml
fiji-builder/: Cargo.toml
fiji-builder/src/: lib.rs
fiji/examples/: 2d_example.rs  3d_example.rs  circle_test_example.rs  image_example.rs
fiji/src/input/: converter.rs  fiji_events.rs  mod.rs
fiji/src/public/: datatypes.rs
src/: lib.rs  main.rs
src/draw_objects/: background.rs  circle.rs  line.rs  mod.rs  polygon.rs  rect.rs  square.rs
src/input/: converter.rs  fiji_events.rs  input_enums.rs  mod.rs
src/objects/: background.rs  help_functions.rs  mod.rs
src/objects/camera/: camera_2d.rs  camera_3d.rs
src/objects/obj_2d/: circle.rs  line.rs  mod.rs  polygon.rs  rect.rs
src/objects/obj_3d/: block.rs
src/public/: context.rs  datatypes.rs  mod.rs
src/public/objects/: background.rs  mod.rs  shared.rs
src/rendering/: common.rs  context.rs  data_types.rs  device_container.rs  event_loop_container.rs  mod.rs  render_passes.rs
src/rendering/pipelines/: background_pipeline.rs  mod.rs
src/rendering/render_containers/: device_container.rs  event_loop_container.rs  mod.rs  pipeline_container.rs  render_container.rs  render_pass_container.rs
src/rendering/render_objects/: background_ro.rs  mod.rs  shared.rs
src/rendering/render_passes/: background_render_pass.rs  block_render_pass.rs  circle_render_pass.rs  line_render_pass.rs  mod.rs  poly_render_pass.rs
src/shaders/: block_render_pass.frag  block_render_pass.vert  circle_render_pass.frag  circle_render_pass.vert  line_render_pass.frag  line_render_pass.vert  poly_render_pass.frag  poly_render_pass.vert  poly_renderpass.frag  poly_renderpass.vert
src/shaders/shaders_2d/: circle_pipeline.frag  (+7 more)
(+47 files in other folders)
