[package]
name = "fiji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano-shaders = "0.30.0"
vulkano = "0.30.0"
vulkano-win = "0.30.0"
vulkano-util = "0.30.0"
winit = "0.26.1"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }

rand = "0.8.5"
nalgebra = "*"
nalgebra-glm = "0.17.0"
queues = "1.0.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3