[package]
name = "fiji"
version = "0.1.0"
edition = "2021"
description = "Just a small, very simple SDL-like renderer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano-shaders = "0.32.0"
vulkano = "0.32.0"
vulkano-win = "0.32.0"
vulkano-util = "0.32.0"
winit = "0.27.5"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }

fontdue = "0.7.2"
image = "0.24.5"

rand = "0.8.5"
nalgebra = "0.31.1"
nalgebra-glm = "0.17.0"
queues = "1.0.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3